--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -138,3 +138,7 @@ a#add_project{ /* button */
   margin-left: calc(50% - 94px);
   margin-bottom: 50px;
  } 
+ .profile-img-card{
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+ }
